upload index file again.
Change the work experience

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <hr />
         <h3>WORK EXPERIENCE</h3>
         <ol>
-            <li>Leader Quality Control Engineer - OUTSOURCE ASIA. May 2017 - May 2022
+            <li><h4>Leader Quality Control Engineer - OUTSOURCE ASIA.</h4>
+                <p> May 2017 - May 2022</p>
                 <ul>
                     <li>Summarizing project requirements, assigning tasks, and documenting bugs.</li>
                     <li>Collaborating closely with Project Managers (PM) and Business Analysts (BA).</li>
@@ -29,7 +30,8 @@
                     <li>Monitoring and controlling testing progress in the team to ensure tests are completed on time and match project planning.</li>
                 </ul>
             </li>
-            <li>Senior Quality Control Engineer - Bach Tuoc So JSC. April 2011 - April 2017
+            <li><h4>Senior Quality Control Engineer - Bach Tuoc So JSC.</h4>
+                <p>April 2011 - April 2017</p>
                 <ul>
                     <li>Conducting comprehensive testing of games across various platforms, including web forms, Android, and iOS.</li>
                     <li>Administering testing tools for each project.</li>
